--- a/lessons/2/lesson.qmd
+++ b/lessons/2/lesson.qmd
@@ -1,10 +1,9 @@
-# Lesson 2
-
-- Version Control System
-
+---
+title: "Lesson 2: Version Control System"
+date: 2024-10-09
 ---
 
-## Version Control System
+# Version Control System
 
 `git` is a Distributed Version Control System
 
@@ -15,9 +14,7 @@
 
 https://git-scm.com/
 
----
-
-## What is a DVCS
+# What is a DVCS
 
 - A VCS keeps older versions of your files
 - Like an "undo" button on steroids
@@ -31,222 +28,135 @@ https://git-scm.com/
 
 Caveat: you have to manually create the undo-steps.
 
----
-
-## In practice
+# In practice
 
 - Let's make it visual
 - Once you have tasted the power, you never want to go back
 
-vvvvvv
-
 ## start
 
-![v1](2/v1.webp)
-
-v1
-
-vvvvvv
+![v1](v1.webp)
 
 ## add man
 
-![v2](2/v2.webp)
-
-v2
-
-vvvvvv
+![v2](v2.webp)
 
 ## add cat
 
-![v3](2/v3.webp)
-
-v3
-
-vvvvvv
+![v3](v3.webp)
 
 ## add faces on man and cat
 
-![v4](2/v4.webp)
-
-v4
-
-vvvvvv
+![v4](v4.webp)
 
 ## add piano on string
 
-![v5](2/v5.webp)
-
-v5
-
-vvvvvv
+![v5](v5.webp)
 
 ## Make piano on string obey the laws of physics
 
-![v6](2/v6.webp)
-
-v6
-
-vvvvvv
+![v6](v6.webp)
 
 ## Replace piano by safe
 
-![v7](2/v7.webp)
-
-v7
-
-vvvvvv
+![v7](v7.webp)
 
 ## Colour cat
 
-![v8](2/v8.webp)
-
-v8
-
-vvvvvv
+![v8](v8.webp)
 
 ## Give man a hat
 
-![v9](2/v9.webp)
-
-v9
-
-vvvvvv
+![v9](v9.webp)
 
 ## Give cat an aura
 
-![v10](2/v10.webp)
-
-v10
-
-vvvvvv
+![v10](v10.webp)
 
 ## Get a second winch for string
 
-![v11](2/v11.webp)
+![v11](v11.webp)
 
-v11
+# "Timeline"
 
----
-
-## "Timeline"
-
-![timeline](2/timeline.webp)
+![timeline](timeline.webp)
 
 The steps in order, with short names and version numbers
 
 
----
+# Revision-line
 
-## Revision-line
-
-![revisionline](2/revisionline.webp)
+![revisionline](revisionline.webp)
 
 It might make as much sense, to name the changes (not the images)
 
----
+# Environment
 
-## Environment
-
-![v6](2/v6.webp)
+![v6](v6.webp)
 
 When I was working here, I wanted to experiment with adding some environment
 
-vvvvvv
-
 ## Add a sun
 
-![v7*](2/v7p.webp)
-
-v7*
-
-vvvvvv
+![v7*](v7p.webp)
 
 ## Add houses and a tree
 
-![v8*](2/v8p.webp)
-
-v8*
+![v8*](v8p.webp)
 
 Note that _I_ decide what goes together into a revision
 
-vvvvvv
-
 ## Add a river
 
-![v9*](2/v9p.webp)
-
-v9*
-
-vvvvvv
+![v9*](v9p.webp)
 
 ## Add a car
 
-![v10*](2/v10p.webp)
+![v10*](v10p.webp)
 
-v10*
+# New revisionline
 
----
-
-## New revisionline
-
-![revisionline-with-environ](2/revisionline-with-environ.webp)
-
----
+![revisionline-with-environ](revisionline-with-environ.webp)
 
 ## Speech bubbles
 
-![v5](2/v5.webp)
+![v5](v5.webp)
 
 Also at some point I looked into speech bubbles
 
-vvvvvv
-
 ## Wisecracks
 
-![v6**](2/v6pp.webp)
-
-v6**
+![v6**](v6pp.webp)
 
 Note that this frame makes sense, however this would not make sense together with the sun.
 
-vvvvvv
-
 ## More realistic response
 
-![v7**](2/v7pp.webp)
+![v7**](v7pp.webp)
 
-v8*
+# New revisionline
 
----
+![revisionline-with-2-branches](revisionline-with-2-branches.webp)
 
-## New revisionline
+# Even more complex
 
-![revisionline-with-2-branches](2/revisionline-with-2-branches.webp)
+![revisionline-with-branches](revisionline-with-branches.webp)
 
----
+# Tree
 
-## Even more complex
+![root](root.webp)
 
-![revisionline-with-branches](2/revisionline-with-branches.webp)
+# Tree with branches
+![branchpoints](branchpoints.webp)
 
----
-## Tree
+# Two similar trees
+![revisionline-with-branches](revisionline-with-branches.webp)
 
-![root](2/root.webp)
----
+## Alternative
 
-## Tree with branches
-![branchpoints](2/branchpoints.webp)
----
+![revisionline-with-branches-alt](revisionline-with-branches-alt.webp)
 
-## Two similar trees
-![revisionline-with-branches](2/revisionline-with-branches.webp)
-vvvvvv
-![revisionline-with-branches-alt](2/revisionline-with-branches-alt.webp)
-
----
-
-## Trees and branches in git
+# Trees and branches in git
 
 - In `git` you work with _repositories_
 - A repository is a tree with (usually) a single root
@@ -256,70 +166,56 @@ vvvvvv
 - A branch does not have to "stick out", you can even have two branches completely overlap
 - Default branch name is `main` or `master`
 
----
+# Branches
 
-## Branches
+![drawn-branches](drawn-branches.webp)
 
-![drawn-branches](2/drawn-branches.webp)
+# Why do we need a repository
 
----
+Undo specific commit
 
-## Why do we need a repository
+: - "Undo" normally allows undoing of the last action.
+  - In VCS, you can _revert_ any commit
+  - e.g. once the drawing is finished, you could do `git revert v4`, what would happen?
 
-### Undo specific commit
-
-- "Undo" normally allows undoing of the last action.
-- In VCS, you can _revert_ any commit
-- e.g. once the drawing is finished, you could do `git revert v4`, what would happen?
+. . .
 
 The faces should be removed from the final image
-<!-- .element class="hidden-answer" -->
 
-<button>show answer</button>
+. . .
 
 - Note that sometimes a later commit depends on a previous one, meaning manual fixing is needed.
 
-vvvvvv
-
-### Separation of features
+## Separation of features
 
 - By doing certain things in separate branches, you can try things without polluting the stable code.
 - e.g. I could experiment adding text bubbles, and only decide later if I needed them
 - It means that if you have a function, you could work on some changes, but still keep the original function until your changes are done
 
-vvvvvv
-
-### Merge two branches
+## Merge two branches
 
 - It's possible merge two branches.
 - If we are on the `main` branch, and type `git merge environment`, what should happen?
 
-The changes in the `environment` branch should be "imported", so there will be all the changes in the `main` branch, and the sun/house/tree/car.
-<!-- .element class="hidden-answer" -->
+. . .
 
-<button>show answer</button>
+The changes in the `environment` branch should be "imported", so there will be all the changes in the `main` branch, and the sun/house/tree/car.
+
+. . .
 
 - Also here, this may not always be possible automatic, or the result may not always make sense. e.g. import the `speech-bubbles` branch into the `environment` branch.
 
-vvvvvv
-
-### Cherry-pick certain commits
+## Cherry-pick certain commits
 
 - It's not necessary to merge whole branches, but e.g. only import the commit that adds the car to the `main` branch.
 
-vvvvvv
-### Different people can work on different branches
+## Different people can work on different branches
 
 - And then sync through something like GitHub
 
-vvvvvv
-### History, attribution and comments
+## History, attribution and comments
 
 - At any time it's possible to see the full history of the repository, and go to any spot in the tree
 - At this spot, new branches can be started
 - The history will show _who_ did a certain commit and show the _commit message_.
 - Git tools also allow you to see in the current code, when a certain line was last changed and by whom.
-
----
-
-![revisionline-with-branches](2/revisionline-with-branches.webp)
