--- a/lessons/1/lesson.qmd
+++ b/lessons/1/lesson.qmd
@@ -1,3 +1,7 @@
+---
+title: "Lesson 1: Into, Shell, CLI"
+date: 2024-10-02
+---
 # Course concept
 
 The end goal is to *understand* how to use git & Github.
@@ -9,8 +13,6 @@ Rather we build up the foundations layer by layer:
 - Version Control Systems: from cvs to git (focus on git)
 - Github, Github flow, other Github tools
 
----
-
 # Questions
 
 The idea is to build from the ground up.
@@ -18,12 +20,9 @@ This means that questions like "why it it like this", or "what is that based on"
 
 I don't know what you don't know, so please stop me if I assume that something is known!
 
----
-
 # Layers
 
-![Layers](1/shrek.webp)
----
+![Layers](shrek.webp)
 
 # Computers are complex
 
@@ -34,8 +33,6 @@ I don't know what you don't know, so please stop me if I assume that something i
 - Likewise, Standard R will run on Linux, on MacOS, on Windows
 - Windows runs on Dell, Lenovo, etc.
 
----
-
 # CLI, Terminal, Shell
 
 - Command-line-interface, terminal and shell are being used interchangeably.
@@ -44,8 +41,6 @@ I don't know what you don't know, so please stop me if I assume that something i
     - Shell is a lower layer. Simple version: start other programs. More complex: full programming language. Example: `bash`
     - Command line interface (CLI): the API that a certain program (e.g. `git`) exposes to the shell (command line) that controls what the program does.
 
----
-
 # Command line ecosystem
 
 - Unix-like systems (incl MacOS and `git-bash`) provide hundreds of small command line programs.
@@ -53,8 +48,6 @@ I don't know what you don't know, so please stop me if I assume that something i
 - Additional programs can be installed (like additional packages)
 - Quite often, one CLI program will call another program.
 - Like with layers, this also often means they can be swapped out.
-
----
 
 # Command line interface
 
@@ -69,9 +62,7 @@ ls 'this file has a long name.txt'
 ls this\ file\ has\ a\ long\ name.txt
 ```
 
-vvvvvv
-
-# Parameters and flags
+## Parameters and flags
 
 In *most* unix command-line tools the following conventions are used (however there are exceptions):
 
@@ -86,9 +77,7 @@ In *most* unix command-line tools the following conventions are used (however th
     - Each program defines which double-dash things are flags, which are named params
 - Anything else is a non-named parameter
 
-vvvvvv
-
-# Slashes
+## Slashes
 
 In the whole world backslash (`\`) is an escape character, and forward slash (`/`) is a directory separator:
 
@@ -109,15 +98,12 @@ However historically in Microsoft shells (DOS (`cmd.exe`), PowerShell, *not* `gi
 - forward slash is to indicate flags
 - Caret (`^`) *sometimes* escapes spaces (\*sigh\*)
 
-```
+```text
 C:\Documents
 dir /x
 ```
 
-vvvvvv
-
-
-# Examples
+## Examples
 
 
 ```asciiart
@@ -141,8 +127,6 @@ mkdir -v -m 0777 "project1 project2"
 git log --follow --date=iso8601-strict --pretty=format:'%H %ad %d' main lessons/index.html
 ```
 
----
-
 # A step back
 
 ## `git`
@@ -152,8 +136,6 @@ It can send your changes to other computers and retrieve them from other compute
 
 Site: https://git-scm.com/ (git source code management)
 
-vvvvvv
-
 ## Github
 
 Github is a website (launched 2008, owned by Microsoft since 2018). It allows `git` to `push` and `pull` to a central location. In addition, it offers other tools for cooperation (bug tracking, project planning, etc). Basic use of Github is free, however there is controversy that code on Github is being used to train AI.
@@ -162,10 +144,7 @@ There are alternatives to Github, GitLab and BitBucket being the most used.
 
 Site: https://github.com/
 
-vvvvvv
-
 ## `git` ≠ Github
----
 
 # Why command-line
 
@@ -176,21 +155,19 @@ These days there are lots of GUI alternatives, but to really understand how `git
 Also, the command line is the most wide-spread version of `git` and has the most descriptions on how to do things online.
 
 
----
-
 # Install term/shell/git
 
-## MacOS
+MacOS:
+
 - (optionally) install iTerm2 (from https://iterm2.com/); alternatively use built-in `Terminal.app`
 - Install HomeBrew (go to https://brew.sh/ and copy-paste that line into the terminal. **NB: normally never do this**
 - Install a new `git` version: `brew install git`
 - Check `git` version: `git --version`
 
 
-## Windows
-- Install Terminal + Shell (`bash`) + `git`: https://gitforwindows.org/
+Windows:
 
----
+- Install Terminal + Shell (`bash`) + `git`: https://gitforwindows.org/
 
 # Why use Terminal / Shell
 
@@ -203,8 +180,6 @@ Also, the command line is the most wide-spread version of `git` and has the most
 *Personally, I do most of my things in terminal (including coding / making this presentation / etc) but this is excessive*
 
 Not well suited for graphical applications (photo/video editing / web browsing (usually) / etc)
-
----
 
 # With great power ...
 
@@ -222,8 +197,6 @@ Not well suited for graphical applications (photo/video editing / web browsing (
 
 On the other hand, if you're careful, things will be ok
 
----
-
 # What is the shell
 
 - Programming environment
@@ -236,8 +209,6 @@ Works in the same environment as GUI (files and directories)
 **shell is always "in" some directory (called working directory).
 Commands are usually relative to working directory,
 so it's important to know where you are**
-
----
 
 # Interaction with shell commands (programs)
 
@@ -259,8 +230,6 @@ Most (basic) commands are supposed to run non-interactive
                 return code
 ```
 
----
-
 # Hands on: let's start
 
 1. Open your terminal. Terminal will start default shell.
@@ -270,56 +239,41 @@ Most (basic) commands are supposed to run non-interactive
 A unix shell is a fully fledged programming language, and we could fill a 10 week course with just the shell basics. Instead, we will introduce new concepts as we get to them.
 
 
----
-
 # Cheat sheet 1: commands
-
 - `pwd`: print working directory
 - `ls`: list directory
 - `cd`: change directory (e.g. `cd project`)
 - `mkdir`: make directory (e.g. `mkdir project` or `mkdir -p project/A`
 - `rmdir`: remove **empty** directory (e.g. `rmdir project`)
-
-vvvvvv
-
 - `touch`: creates an empty file (e.g. `touch README.md`)
 - `cat`: print out a file (e.g. `cat README.md`)
 - `cp`: copy a file (e.g. `cp README.md README2.md` or `cp README.md project`)
 - `mv`: move (rename) a file (e.g. `mv README.md README2.md` or `mv README.md project`)
+
+## part 2
 - `rm`: remove (delete) a file (e.g. `rm README.md`)
 - `nano`: simple text editor (may or may not be installed)
-
-vvvvvv
-
 - `history`: shows previous commands
 - `exit`: quit *this shell*
 - `echo`: print (e.g. `echo "hello gdansk"`)
 
----
-
 # Cheat sheet 1 extras (advanced)
 
-### Redirects
+Redirects:
 
 - `>`: redirect stdout to file (overwrite; e.g. `echo hello > test.txt`)
 - `>>`: append stdout to file (e.g. `echo hello again >> test.txt`)
 - `|`: send stdout as stdin of next command
 
-vvvvvv
-
-### Separators between commands on same line
+Separators between commands on same line:
 
 - `;`: end of command
 - `&&`: "and"; next command only runs if previous succeeded
 - `||`: "or"; next command only runs if previous failed
 
-vvvvvv
-
-### Subshell
+## Subshell
 
 - `$(cmd)` execute `cmd` and put the output in place of this. e.g `echo "I'm in $(pwd)"`
-
----
 
 # Cheat sheet 2: files and directory names
 
@@ -332,15 +286,11 @@ vvvvvv
 - `/tmp`: place for temporary files (e.g. removed after restart)
 - `.xxxx`: hidden file / directory (starts with `.`)
 
-vvvvvv
-
-### wildcards:
+## wildcards:
 - `*`: 0 or more characters
 - `?`: 1 character
 - `[abc]`, [a-z]: any of the characters in `a`, `b` and `c` or between `a` and `z`
 - `{mp4,MTS}`: either `mp4` or `MTS`
-
----
 
 # Cheat sheets notes
 
